final-project/t
Build profile: -w ghc-9.2.8 -O1
In order, the following will be built (use -v for more details):
 - criterion-measurement-0.2.3.0 (lib) (requires build)
 - glpk-hs-0.5 (lib:glpk-hs) (requires build)
 - microstache-1.0.3 (lib) (requires build)
 - statistics-0.16.2.1 (lib) (requires build)
 - final-project-0.1.0.0 (lib) (first run)
 - criterion-1.6.4.0 (lib) (requires build)
 - final-project-0.1.0.0 (test:final-project-test) (first run)
 - final-project-0.1.0.0 (bench:sat-solver-bench) (first run)
Starting     criterion-measurement-0.2.3.0 (lib)
Starting     glpk-hs-0.5 (all, legacy fallback)
Starting     microstache-1.0.3 (lib)
Starting     statistics-0.16.2.1 (lib)
Building     glpk-hs-0.5 (all, legacy fallback)
Building     criterion-measurement-0.2.3.0 (lib)
Building     microstache-1.0.3 (lib)
Building     statistics-0.16.2.1 (lib)
Installing   criterion-measurement-0.2.3.0 (lib)
Installing   microstache-1.0.3 (lib)
Completed    criterion-measurement-0.2.3.0 (lib)
Completed    microstache-1.0.3 (lib)
Installing   statistics-0.16.2.1 (lib)
Completed    statistics-0.16.2.1 (lib)

Failed to build glpk-hs-0.5.
Build log ( /Users/zanderchown/.cabal/logs/ghc-9.2.8/glpk-hs-0.5-5d8ff7d3.log
):
Warning: glpk-hs.cabal:30:33: version operators used. To use version operators
the package needs to specify at least 'cabal-version: >= 1.8'.
Configuring glpk-hs-0.5...
Preprocessing library for glpk-hs-0.5..
Building library for glpk-hs-0.5..
[ 1 of 16] Compiling Control.Monad.LPMonad.Supply.Class ( Control/Monad/LPMonad/Supply/Class.hs, dist/build/Control/Monad/LPMonad/Supply/Class.o, dist/build/Control/Monad/LPMonad/Supply/Class.dyn_o )

Control/Monad/LPMonad/Supply/Class.hs:8:1: warning: [-Wdeprecations]
    Module ‘Control.Monad.Error’ is deprecated:
      Use "Control.Monad.Except" instead
  |
8 | import Control.Monad.Error
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^

Control/Monad/LPMonad/Supply/Class.hs:18:1: warning: [-Wtabs]
    Tab character found here, and in 20 further locations.
    Please use spaces instead.
   |
18 |         -- | Supply a new value of type @s@.
   | ^^^^^^^^

Control/Monad/LPMonad/Supply/Class.hs:34:11: warning: [-Wdeprecations]
    In the use of type constructor or class ‘Error’
    (imported from Control.Monad.Error, but defined in transformers-0.5.6.2:Control.Monad.Trans.Error):
    Deprecated: "Use Control.Monad.Trans.Except instead"
   |
34 | instance (Error e, MonadSupply x m) => MonadSupply x (ErrorT e m) where
   |           ^^^^^

Control/Monad/LPMonad/Supply/Class.hs:34:55: warning: [-Wdeprecations]
    In the use of type constructor or class ‘ErrorT’
    (imported from Control.Monad.Error, but defined in transformers-0.5.6.2:Control.Monad.Trans.Error):
    Deprecated: "Use Control.Monad.Trans.Except instead"
   |
34 | instance (Error e, MonadSupply x m) => MonadSupply x (ErrorT e m) where
   |                                                       ^^^^^^
[ 2 of 16] Compiling Control.Monad.LPMonad.Supply ( Control/Monad/LPMonad/Supply.hs, dist/build/Control/Monad/LPMonad/Supply.o, dist/build/Control/Monad/LPMonad/Supply.dyn_o )
[ 3 of 16] Compiling Data.LinearProgram.GLPK.Types ( Data/LinearProgram/GLPK/Types.hs, dist/build/Data/LinearProgram/GLPK/Types.o, dist/build/Data/LinearProgram/GLPK/Types.dyn_o )

Data/LinearProgram/GLPK/Types.hs:34:9: warning: [-Wnoncanonical-monad-instances]
    Noncanonical ‘return’ definition detected
    in the instance declaration for ‘Monad GLPK’.
    ‘return’ will eventually be removed in favour of ‘pure’
    Either remove definition for ‘return’ (recommended) or define as ‘return = pure’
    See also: https://gitlab.haskell.org/ghc/ghc/-/wikis/proposal/monad-of-no-return
   |
34 |         return x = GLP $ \ _ -> return x
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Data/LinearProgram/GLPK/Types.hs:41:3: warning: [-Wnoncanonical-monad-instances]
    Noncanonical ‘pure = return’ definition detected
    in the instance declaration for ‘Applicative GLPK’.
    Move definition from ‘return’ to ‘pure’
    See also: https://gitlab.haskell.org/ghc/ghc/-/wikis/proposal/monad-of-no-return
   |
41 |   pure = return
   |   ^^^^^^^^^^^^^
[ 4 of 16] Compiling Data.LinearProgram.Types ( Data/LinearProgram/Types.hs, dist/build/Data/LinearProgram/Types.o, dist/build/Data/LinearProgram/Types.dyn_o )

Data/LinearProgram/Types.hs:16:10: error:
    • No instance for (Semigroup VarKind)
        arising from the superclasses of an instance declaration
    • In the instance declaration for ‘Monoid VarKind’
   |
16 | instance Monoid VarKind where
   |          ^^^^^^^^^^^^^^

Data/LinearProgram/Types.hs:39:10: error:
    • Could not deduce (Semigroup (Bounds a))
        arising from the superclasses of an instance declaration
      from the context: Ord a
        bound by the instance declaration
        at Data/LinearProgram/Types.hs:39:10-35
    • In the instance declaration for ‘Monoid (Bounds a)’
   |
39 | instance Ord a => Monoid (Bounds a) where
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^
